<resources>
    <string name="back">Back</string>
    <string name="browse_events">Browse Events</string>
    <string name="admin">ADMIN</string>
    <string name="menu">Menu</string>
    <string name="search_events">Search events…</string>
    <string name="no_events_found">No events found</string>
    <string name="empty_events">Empty events</string>
    <string name="event_poster">Event Poster</string>
    <string name="_12_nov_sat_6_00_pm">12 NOV- SAT -6:00 PM</string>
    <string name="a_virtual_evening_of_smooth_jazz">A virtual evening of smooth jazz</string>
    <string name="location">Location</string>
    <string name="delete_event">Delete Event?</string>
    <string name="delete_confirmation_message">Are you sure you want to remove "%1$s"? This will remove it from the list. This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_poster">Add Poster</string>
    <string name="save">Save</string>
    <string name="registration_closes">Registration Closes</string>
    <string name="registration_opens">Registration Opens</string>
    <string name="set_capacity">Set Capacity</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="event_type">Event Type</string>
    <string name="event_name">Event Name</string>
    <string name="event_details">Event Details</string>
    <string name="add">+</string>
    <string name="add_poster_photo">Add Poster Photo</string>
    <string name="create_new_event">Create New Event</string>
    <string name="my_map_api_key">AIzaSyCAF-TQpmlxFSAyuj5Ge-OsXw-q1Bn1FwU</string>
    <string name="inbox">Inbox</string>
    <string name="archive">Archive</string>

    <string-array name="event_types">
        <item>Concert</item>
        <item>Workshop</item>
        <item>Party</item>
        <item>Other</item>
    </string-array>

    <string-array name="event_capacities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="actions">ACTIONS</string>
    <string name="events">Events</string>
    <string name="profiles">Profiles</string>
    <string name="images">Images</string>
    <string name="admin_can_browse_events">Admin can browse events</string>
    <string name="app_name">code</string>
    <string name="search_images">Search images...</string>
    <string name="search_users">Search users...</string>


    //new features

    <string name="notif_selected">You have been selected for the music event!</string>
    <string name="notif_not_selected">You were not selected for the music event</string>
    <string name="notif_time_now">Just now</string>
    <string name="notif_dismiss">Dismiss</string>
    <string name="notif_details">See Details</string>
    <string name="notif_read">Read</string>
    <string name="notif_unread">Unread</string>
    <string name="notif_prefs_title">Notification Preferences</string>
    <string name="profile_picture">Profile picture</string>
    <string name="see_details">See Details</string>
    <string name="inbox_title">Inbox</string>
    <string name="mark_all_read">Mark All Read</string>
    <string name="show_unread">Show Unread</string>
    <string name="show_all">Show All</string>
    <string name="view_archived">Archive</string>
    <string name="show_inbox">Inbox</string>
    <string name="dismiss">Dismiss</string>
    <string name="settings">Settings</string>

    <string name="action_icon_description">Action Icon</string>
    <string name="event_accepted_message">You have accepted to attend this event</string>
    <string name="event_declined_message">You have declined this invite and will be removed from the waitlist</string>
    <string name="event_just_now">Just now</string>
    <string name="ok">OK</string>
    <string name="see_events">See Events</string>

</resources>